--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "sequelize": "^4.32.2"
+    "pg": "^7.4.1",
+    "sequelize": "^4.32.2",
+    "volleyball": "^1.4.1"
   }
 }
