--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.2",
     "morgan": "^1.9.0",
     "pg": "^7.4.1",
+    "pg-hstore": "^2.3.2",
     "sequelize": "^4.32.2"
   },
   "devDependencies": {
